# Gorgon

./: .gitignore  .hgignore  CMakeLists.txt  CMakePresets.json  GGE Filter for VS.txt  GGE.sln  GGE.vcxproj  GGE.vcxproj.filters  GGE_2010.sln  GGE_2010.vcxproj  GGE_2012.sln  GGE_2012.vcxproj  GGE_2012.vcxproj.filters  GGE_VS_INSTALLATION_TURKISH.odt  LICENSE  Linker setup for VS.txt  README.md  Sample cpp file.txt  Wooden.wgt  debugvisualizers.txt  default.ui.wgt  dir.cmake  instructions.txt  test.sh
Docs/: Design.html  Design.md  EBNF.txt  Scripting Dialect EBNF.txt  Visual Studio Debug Visualizers.txt
Effects/: CountingText.cpp  CountingText.h  Flip.cpp  Flip.h  LayerMover.cpp  LayerMover.h  LayerResizer.cpp  LayerResizer.h  Tinting.cpp  Tinting.h  dir.cmake
Encoding/: JPEG.cpp  JPEG.h  LZMA.cpp  LZMA.h  PNG.cpp  PNG.h  URI.cpp  dir.cmake
Engine/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  AudioClip.cpp  AudioClip.h  CustomLayer.cpp  CustomLayer.h  Font.cpp  Font.h  FontRenderer.h  GGE.h  GGEMain.cpp  GGEMain.h  Graphic2D.cpp  Graphic2D.h  GraphicLayers.cpp  GraphicLayers.h  GraphicTargets2D.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  Input.cpp  Input.h  Layer.cpp  Layer.h  Multimedia.cpp  Multimedia.h  OS.Linux.cpp  OS.Linux.h  OS.Win32.cpp  OS.Win32.h  OS.h  OpenGL.cpp  OpenGL.h  Pointer.cpp  Pointer.h  ResizableObject.h  ShaderBase.cpp  (+13 more)
Examples/: Readme.txt
Examples/CGAnimationTemplate/: CMakeLists.txt
Examples/CGAnimationTemplate/Source/: Application.cpp  Application.h  Main.cpp
Multimedia/: Multimedia.cpp  Multimedia.h  Music.cpp  Music.h  dir.cmake
Network/: HTTP.cpp  HTTP.h  dir.cmake
Package/: GorgonConfig.cmake  GorgonTargets.cmake
Resource/: Animation.cpp  Animation.h  AnimationResource.cpp  AnimationResource.h  Base.cpp  Base.h  BitmapFont.cpp  BitmapFont.h  BitmapFontResource.cpp  BitmapFontResource.h  Blob.cpp  Blob.h  DataArray.cpp  DataArray.h  DataResource.cpp  DataResource.h  Definitions.h  File.cpp  File.h  Folder.cpp  Folder.h  FolderResource.cpp  FolderResource.h  FontTheme.cpp  FontTheme.h  GRE.h  Image & Animation.cd  Image.cpp  Image.h  ImageResource.cpp  ImageResource.h  LinkNode.cpp  LinkNode.h  Main.cpp  Main.h  NullImage.h  Pointer.cpp  Pointer.h  PointerResource.cpp  PointerResource.h  (+15 more)
Resources/: GGE.py  Gorgon-gdb.py  Logo-3D-small.stl  Logo-3D.blend  Logo-3D.stl
Scripts/: Compiler.cmake  Doxyfile.in  Doxygen.cmake  FindFLAC.cmake  FindVorbis.cmake  GorgonConfig.cmake.in  GorgonConfigVersion.cmake.in  Libs.cmake  Macros.cmake  Testing.cmake  linkgge.cmake
ShaderCode/: ShaderCode.cpp  ShaderCode.h
Source/: Animation.h  Any.h  CMakeLists.txt  Console.h  Console_Win32.cpp  Enum.h  Event.h  Filesystem.h  GL.h  Graphics.h  Input.h  Keyboard.h  Layer.cpp  Layer.h  Main.cpp  Main.h  OS.h  SGuid.cpp  SGuid.h  Scripting.h  String.h  TMP.h  Threading.h  Time.h  Types.h  Window.cpp  Window.h  WindowManager.h  dir.cmake
Source/Gorgon/Game/: CMakeLists.txt  README.md  dir.cmake  main  main.cpp
Source/Gorgon/Game/Exceptions/: Exception.h  dir.cmake
Source/Gorgon/Game/FillerSystem/: Filler.h
Source/Gorgon/Game/Map/: Tiled.h  TiledMap.h  dir.cmake
Source/Gorgon/Game/Nullable/: Nullable.h  dir.cmake
Source/Gorgon/Game/ObjectFinding/: FindObject.h  ObjectFinding.h
Source/Gorgon/Game/Parse/: Parse.h  dir.cmake
Source/Gorgon/Game/Parse/FillerSystem/: Filler.h  dir.cmake
Source/Gorgon/Game/Parser/: Exceptions.h  Parse.cpp  Parse.h  Parsed.h  Parser.cpp  Parser.h
Source/Gorgon/Game/ParserOld/: ParseOld.cpp  ParseOld.h
Source/Gorgon/Game/Pathfinding/: AStar.h  Pathfinders.h
Source/Gorgon/Game/Renderer/: Renderer.h  dir.cmake
Source/Gorgon/Game/Renderer/Tiled/: Renderer.h
Source/Gorgon/Game/World/: Scene.h  World.h  dir.cmake
Testing/: .directory  tests.cmake
Tests/: test.cpp
Tools/GscriptGenerator/: CMakeLists.txt
Tools/GscriptGenerator/Source/: GscriptGenerator.cpp
Tools/ResourceManagementUI/: CMakeLists.txt  README.md  Readme.md
Tools/ResourceManagementUI/Scripts/: Macros.cmake
Tools/ResourceManagementUI/Source/: Main.cpp  dir.cmake
Tools/ResourceManagementUI/Source/Importer/: .Image.h.kate-swp  Audio.cpp  Audio.h  Image.cpp  Image.h  dir.cmake
Tools/ResourceManagementUI/Source/UI/: .App.cpp.kate-swp  App.cpp  App.h  Cli.cpp  Cli.h  dir.cmake
Utils/: Any.h  BasicGraphics.h  BasicMath.h  Binary.h  Bounds2D.h  BufferList.h  CastableManagedBuffer.h  Collection.h  ConsumableEvent.h  Dynamic.h  EventChain.h  FileSystemHelper.h  GGE.h  Guid.h  Iterator.h  LinkedList.h  Logging.h  ManagedBuffer.h  ManagedVector.h  Map2D.h  Margins.h  OrderedCollection.h  PAClassList.h  Point2D.h  Property.h  Random.cpp  Random.h  Rectangle2D.h  RefCounter.h  SGuid.cpp  SGuid.h  Size2D.h  SortedCollection.h  StringEnum.h  StringTokenizer.h  StringUtils.h  Utils.h  UtilsBase.h  ValueList.h  dir.cmake
Widgets/: Button.cpp  Button.h  ButtonBP.cpp  ButtonBP.h  ButtonElement.cpp  ButtonElement.h  ButtonLoader.cpp  ButtonStyleGroup.cpp  ButtonStyleGroup.h  Checkbox.cpp  Checkbox.h  CheckboxBP.cpp  CheckboxBP.h  CheckboxBase.cpp  CheckboxBase.h  CheckboxElement.cpp  CheckboxElement.h  CheckboxLoader.cpp  CheckboxStyleGroup.cpp  CheckboxStyleGroup.h  ClassDiagram.cd  ColorPicker.h  Combobox.h  Definitions.h  DialogWindow.h  ExtenderLayer.h  Frame.cpp  Frame.h  FrameBP.h  FullscreenPanel.h  Heatbar.cpp  Heatbar.h  IDialog.h  IProgressor.h  IScroller.h  IWidgetBluePrint.cpp  IWidgetBluePrint.h  IWidgetContainer.cpp  IWidgetContainer.h  IWidgetObject.cpp  (+71 more)
_Widgets/: Button.cpp  Button.h  ButtonBP.cpp  ButtonElement.cpp  ButtonElement.h  ButtonStyleGroup.cpp  Checkbox.cpp  CheckboxBase.cpp  CheckboxElement.h  Line.h  (+30 more)
map-dev/MapLoader/: CMakeLists.txt
map-dev/MapLoader/Source/: main.cpp  matrix.test.h
map-dev/MapLoader/Source/Map/: Layer.h  Map.h
map-dev/MapLoader/Source/MapLoader/: MapLoader.cpp  MapLoader.h  MapLoaderTestUI.cpp  MapLoaderTestUI.h
map-dev/MapLoader/Source/Matrix/: BaseMatrix.h  FMatrix.h  IMatrix.h  Matrix.h  MatrixLiterals.h
map-dev/MapLoader/Source/Matrix/Impl/: FMatrix.cpp  IMatrix.cpp
(+831 files in other folders)
