CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)

PROJECT(Gorgon)


SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/Lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/Lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/Bin)
SET(CMAKE_TESTING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/Testing)
SET(CMAKE_DOCUMENT_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/Docs)

OPTION(OPENGL "Use OpenGL as underlying GL. Should be ON for now." ON)

OPTION(AUDIO "Enable audio." ON)

OPTION(GORGON_FAST_ANY "Make any to work fast by removing empty checks. This will only apply to release mode." OFF)

OPTION(SCRIPTING "Enable scripting module." ON)

OPTION(NO_LOGGING "Disables logger globally. If set, unit tests for logging will fail." OFF)

OPTION(TESTMODE "Enable test mode." OFF)

OPTION(DOCUMENTATION_GRAPHS "Enable graphs in documentation." OFF)

IF(AUDIO AND NOT AUDIOLIB)
	IF(WIN32)
		SET(AUDIOLIB )
	ELSE()
		SET(AUDIOLIB PULSE)
	ENDIF()
ENDIF()

IF(DOCUMENTATION_GRAPHS)
	SET(DOXYGRAPH YES)
ELSE()
	SET(DOXYGRAPH NO)
ENDIF()

IF(TESTMODE)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DTEST")
ENDIF()

IF(NO_LOGGING)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNO_LOGGING")
ENDIF()

IF(GORGON_FAST_ANY)
	SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DGORGON_FAST_ANY")
ENDIF()

IF(OPENGL)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DOPENGL")
ENDIF()

IF(UNIX) 
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLINUX -Werror=return-type")
ELSE()
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4800")
ENDIF()

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DGLM_SWIZZLE -DGLM_FORCE_RADIANS")

INCLUDE(Scripts/Compiler.cmake)

INCLUDE(Scripts/Macros.cmake)

SET(DebugLibs "")
SET(OptimizedLibs "")

StartSource(Source/Gorgon)

INCLUDE(Scripts/Testing.cmake)

INCLUDE(Scripts/Doxygen.cmake)

ADD_LIBRARY(Gorgon STATIC ${All})
INCLUDE_DIRECTORIES(Gorgon Source/External)

TARGET_LINK_LIBRARIES(Gorgon ${Libs})

IF(NOT DebugLibs STREQUAL "")
	TARGET_LINK_LIBRARIES(Gorgon debug ${DebugLibs})
ENDIF()

IF(NOT OptimizedLibs STREQUAL "")
	TARGET_LINK_LIBRARIES(Gorgon optimized ${OptimizedLibs})
ENDIF()
